# NMB

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250819_0001_initial.py
app/: main.py
app/api/v1/: auth.py  magazines.py  member_tiers.py  members.py  payments.py  routes.py  search.py  subscriptions.py
app/core/: config.py  db.py  db_url.py  rate_limit.py
app/models/: audit_log.py  base.py  download.py  magazine.py  magazine_category.py  member_tier.py  payment.py  social_account.py  subscription.py  user.py  user_membership.py
app/schemas/: auth.py  category.py  common.py  magazine.py  membership.py  user.py
app/services/: audit_service.py  auth_service.py  category_service.py  email_service.py  file_crypto_service.py  magazine_service.py  membership_service.py  oauth_service.py  payment_service.py  storage_service.py
app/utils/: password.py  redis_kv.py  security.py
tests/: test_auth.py  test_health.py  test_oauth.py
